test: separated localstack services from each other;

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,4 +25,4 @@ jobs:
         run: go test ./...
 
       - name: Integration tests
-        run: go test --tags=integration ./test/...
+        run: go test -p 1 --tags=integration ./test/...
