--- a/test/test_configs/config.fixtures_mysql.test.yml
+++ b/test/test_configs/config.fixtures_mysql.test.yml
@@ -3,17 +3,21 @@ app_project: gosoline
 app_family: integration-test
 app_name: fixture-loader
 
-db_drivername: "mysql"
-db_database: "myDbName"
-db_username: "root"
-db_password: "gosoline"
-db_retry_wait: 10
-db_health_check_delay: 30
-db_max_connection_lifetime: 120
-db_parse_time: true
-db_auto_migrate: true
-db_table_prefixed: false
-db_migrations_path: file://test_fixtures/migrations/
+db:
+  default:
+    driver: mysql
+    max_connection_lifetime: 120
+    parse_time: true
+    uri:
+      host: 127.0.0.1
+      port: 3307
+      user: root
+      password: gosoline
+      database: myDbName
+    migrations:
+      enabled: true
+      table_prefixed: false
+      path: file://test_fixtures/migrations/
 
 fixtures:
   enabled: true
