test: fixes health checks for components, sometimes there is an issue because components are not ready yet;

--- a/test/es/config-v7.test.yml
+++ b/test/es/config-v7.test.yml
@@ -1,9 +1,10 @@
 es_test_v7_type: default
-es_test_v7_endpoint: http://127.0.0.1:9226
+es_test_v7_endpoint: http://172.17.0.1:9227
 es_test_v7_templates: []
 
 mocks:
-  metrics_v7:
+  - name: metrics_v7
     component: elasticsearch
     version: 7.1.1
+    host: 172.17.0.1
     port: 9227
