--- a/test/test_configs/config.dynamodb.test.yml
+++ b/test/test_configs/config.dynamodb.test.yml
@@ -1,6 +1,6 @@
 mocks:
-  dynamodb:
+  - name: dynamodb
     component: dynamodb
-    fixtures: 'test_fixtures/ddb_fixtures.json'
     host: 172.17.0.1
-    port: 9875
+    port: 4569
+    debug: true
