--- a/test/test_configs/config.mysql.test.yml
+++ b/test/test_configs/config.mysql.test.yml
@@ -1,7 +1,8 @@
 mocks:
-  mysql:
+  - name: mysql
     component: mysql
     host: 172.17.0.1
     port: 3333
     dbName: myDbName
     version: 8
+    debug: true
