--- a/test/test_configs/config.kinesis.test.yml
+++ b/test/test_configs/config.kinesis.test.yml
@@ -1,5 +1,6 @@
 mocks:
-  kinesis:
+  - name: kinesis
     component: kinesis
     host: 172.17.0.1
-    port: 9875
+    port: 4568
+    debug: true
