--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,5 +1,13 @@
 name: Gosoline
-on: [push, pull_request]
+
+on:
+  pull_request:
+    branches:
+      - master
+  push:
+    branches:
+      - master
+
 jobs:
 
   test:
