--- a/test/test_configs/config.dynamodb.test.yml
+++ b/test/test_configs/config.dynamodb.test.yml
@@ -1,5 +1,5 @@
 mocks:
-  dynamodb:
+  - name: dynamodb
     component: dynamodb
     fixtures: 'test_fixtures/ddb_fixtures.json'
     host: 172.17.0.1
