--- a/test/test_configs/config.sns_sqs.test.yml
+++ b/test/test_configs/config.sns_sqs.test.yml
@@ -1,10 +1,10 @@
 mocks:
-  sqs:
+  - name: sqs
     component: sqs
     host: 172.17.0.1
     port: 4576
 
-  sns:
+  - name: sns
     component: sns
     sqs_endpoint: 'http://gosoline_test_sqs:4576'
     host: 172.17.0.1
