--- a/test/es/config-v7.test.yml
+++ b/test/es/config-v7.test.yml
@@ -3,7 +3,7 @@ es_test_v7_endpoint: http://127.0.0.1:9226
 es_test_v7_templates: []
 
 mocks:
-  metrics_v7:
+  - name: metrics_v7
     component: elasticsearch
     version: 7.1.1
     port: 9227
