--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,4 @@ before_script:
   - go get -v -t -d ./...
 
 script:
-  - go test -p 1 --tags=integration ./test/...
+  - go test -p 1 --tags=integration -v ./test/...
