--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -33,4 +33,4 @@ jobs:
         run: go test ./...
 
       - name: Integration tests
-        run: go test -p 1 --tags=integration ./test/...
+        run: go test -p 1 --tags='integration,fixtures' ./test/...
