--- a/test/es/config-v6.test.yml
+++ b/test/es/config-v6.test.yml
@@ -3,7 +3,7 @@ es_test_v6_endpoint: http://172.17.0.1:9226
 es_test_v6_templates: []
 
 mocks:
-  - name: metrics_v6
+  metrics_v6:
     component: elasticsearch
     version: 6.8.1
     host: 172.17.0.1
