--- a/test/test_configs/config.elasticsearch.test.yml
+++ b/test/test_configs/config.elasticsearch.test.yml
@@ -1,7 +1,7 @@
 mocks:
-  - name: elasticsearch
+  elasticsearch:
     component: elasticsearch
     host: 172.17.0.1
     port: 9201
     version: 6.0.0
-    debug: true
+    debug: false
