--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,6 +23,15 @@ jobs:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
 
+      - name: Execute terraform fmt -check -recursive .
+        run: terraform fmt -check -recursive .
+
+      - name: Execute gofmt -l .
+        run: gofmt -l .
+
+      - name: Execute test -z $(gofmt -l .)
+        run: test -z $(gofmt -l .)
+
       - name: Get dependencies
         run: go get -v -t -d ./...
 
