--- a/examples/gosoline-fixture-loading/config.dist.yml
+++ b/examples/gosoline-fixture-loading/config.dist.yml
@@ -12,7 +12,7 @@ db_hostname: "127.0.0.1"
 db_port: 3306
 db_database: "example"
 db_username: "root"
-db_password: "somepassword"
+db_password: "fixture"
 db_retry_wait: 10
 db_health_check_delay: 30
 db_max_connection_lifetime: 120
@@ -20,6 +20,12 @@ db_parse_time: true
 db_auto_migrate: true
 db_migrations_path: file://migrations
 db_table_prefixed: false
+aws_cloudwatch_endpoint: http://172.17.0.1:4582
+
+redis_default_mode: local
+redis_default_addr: '127.0.0.1:6379'
+redis_kvstore_testModel_mode: local
+redis_kvstore_testModel_addr: '127.0.0.1:6379'
 
 fixtures:
   enabled: true
