apiserver: exposed AddProfilingEndpoints to stop skipping tests and added `go vet` to ci config;
We should always run `go vet` on our code to make sure we are not
introducing stupid mistakes (like copying a mutex, go vet actually saw
the bug we just fixed with coffin). Thus we now always run it on our
code (and now our code actually passes it).

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Build
         run: go build -v ./...
 
+      - name: Static code analysis
+        run: go vet ./...
+
       - name: Test
         run: go test ./...
 
