test: added tmpfs for mysql for faster integration testing;

--- a/test/test_configs/config.elasticsearch.test.yml
+++ b/test/test_configs/config.elasticsearch.test.yml
@@ -1,5 +1,7 @@
 mocks:
   elasticsearch:
     component: elasticsearch
-    version: 6.0.0
     debug: false
+    tmpfs:
+      /usr/share/elasticsearch/data: ''
+    version: 6.0.0
