docs/tour: finished section about subscribers;

--- a/docs/tour/02_stream_well_formed_messages_and_the_consumer_framework/03_consumer_example/config.dist.yml
+++ b/docs/tour/02_stream_well_formed_messages_and_the_consumer_framework/03_consumer_example/config.dist.yml
@@ -6,7 +6,7 @@ app_name: consumer-example
 
 stream:
   consumer:
-    consumerExample:
+    default:
       input: exampleInput
       runner_count: 1
   input:
