--- a/test/test_configs/config.fixtures_mysql.test.yml
+++ b/test/test_configs/config.fixtures_mysql.test.yml
@@ -3,6 +3,9 @@ app_project: gosoline
 app_family: integration-test
 app_name: fixture-loader
 
+orm:
+  db: default
+
 db:
   default:
     driver: mysql
