stream, uuid: added support for protocol buffers;
This commit extends the formats supported by the stream package to
protocol buffers. A properly implemented type is then asked to provide a
protobuf version of itself, that is used to parse the message, and then
the type has to transform its protobuf version to itself. For sending
messages a similar story plays out - a type converts itself to a
protobuf version and then the message is serialized.

After implementing the proper interface with your type you should only
need to configure the output correctly to use the protobuf encoding.
Inputs already receive the format from the attributes and therefore
don't need to be told by hand which format to use.

This commit also extends the uuid module to allow serializing uuids as
byte arrays for use in protocol buffer messages.

--- a/test/stream/config.dist.yml
+++ b/test/stream/config.dist.yml
@@ -35,6 +35,13 @@ stream:
       daemon:
         enabled: true
         aggregation_size: 7
+    testEventsSqs:
+      compression: application/gzip
+      daemon:
+        enabled: true
+        aggregation_size: 4
+        batch_size: 2
+        interval: 5s
 
   output:
     testDataKinesis:
@@ -43,3 +50,11 @@ stream:
     testDataSqs:
       type: sqs
       queue_id: testData
+    testEventsSqs:
+      type: sqs
+      queue_id: testEvents
+
+  input:
+    testEventsSqs:
+      type: sqs
+      target_queue_id: testEvents
