apiserver, test: added struct validation and other options to apiserver and dropped support for api_port, api_mode, etc.;
This commit exposes the struct validation next to the field validation
from validator/v10 as well as type mappers and aliases. It also switches
the api server completely to the new format as supporting both formats
was getting more complex than expected. If you are using the old format,
you will get an error when starting the api servier.

This commit also extends the ApiTestSuite to allow returning a slice of
test cases instead of a single test and adds a second validation
function which gets the response as a parameter.

--- a/examples/apiserver/simple-handlers/config.dist.yml
+++ b/examples/apiserver/simple-handlers/config.dist.yml
@@ -3,11 +3,13 @@ app_project: project
 app_family: family
 app_name: name
 
-api_port: 8088
-api_mode: debug
-api_timeout_read: 5
-api_timeout_write: 5
-api_timeout_idle: 5
+api:
+  port: 8088
+  mode: debug
+  timeout:
+    read: 5s
+    write: 5s
+    idle: 5s
 
 api_auth_keys:
   - changeMe
