--- a/test/apiserver/config.dist.compressed.yml
+++ b/test/apiserver/config.dist.compressed.yml
@@ -2,14 +2,10 @@ env: test
 
 app_project: gosoline
 app_family: test
-app_name: apiserver-test
-
-cfg:
-  server:
-    port: 0
+app_name: compression-test
 
 api:
-  port: 25399
+  port: 8088
   mode: release
   compression:
     level: default
@@ -25,8 +21,3 @@ api:
     read: 10s
     write: 10s
     idle: 10s
-  health:
-    port: 0
-
-http_client_retry_count: 0
-http_client_request_timeout: 2s
