stream: teach the producer daemon not to hide the attributes of a message;
If you wrote messages via the producer daemon (for batching, not
aggregation) to a fifo SQS queue, you would run into the problem that
the producer daemon already encoded the message (to know its size) and
therefore you couldn't access the attributes anymore. Now the daemon
actually remembers the attributes and can expose them if you ask nicely.

--- a/test/stream/config.dist.yml
+++ b/test/stream/config.dist.yml
@@ -42,6 +42,16 @@ stream:
         aggregation_size: 4
         batch_size: 2
         interval: 5s
+    testDataFifoSqs:
+      daemon:
+        enabled: true
+        aggregation_size: 1
+        batch_size: 7
+        interval: 1s
+
+  consumer:
+    testDataFifoSqs:
+      input: testDataFifoSqs
 
   output:
     testDataKinesis:
@@ -53,8 +63,20 @@ stream:
     testEventsSqs:
       type: sqs
       queue_id: testEvents
+    testDataFifoSqs:
+      type: sqs
+      queue_id: testDataFifo
+      fifo:
+        enabled: true
+        content_based_deduplication: true
 
   input:
     testEventsSqs:
       type: sqs
       target_queue_id: testEvents
+    testDataFifoSqs:
+      type: sqs
+      target_queue_id: testDataFifo
+      fifo:
+        enabled: true
+        content_based_deduplication: true
