--- a/examples/uniqueid/config.dist.yml
+++ b/examples/uniqueid/config.dist.yml
@@ -3,11 +3,6 @@ app_project: project
 app_family: family
 app_name: name
 
-cloud:
-  aws:
-    dynamodb:
-      clients: ~
-
 api:
   port: 8088
   mode: debug
@@ -17,5 +12,6 @@ api:
     idle: 5s
 
 unique_id:
-  start_time: "2021-01-01T01:01:01Z"
+  type: "sonyflake" # normally, this will be set by the dx package
+  start_time: "2021-01-01T01:01:01Z" # set the start time, which is part of the id
   machine_id: 1 # keep this empty on ec2 instances
