--- a/.github/workflows/embed-code_md.yml
+++ b/.github/workflows/embed-code_md.yml
@@ -2,7 +2,7 @@ name: "Embed code in README"
 
 on:
   pull_request:
-    branches: [ main, testing_markdown ]
+    branches: [ testing_markdown ]
 
 jobs:
   embed-code:
