--- a/.github/workflows/embed-code_md.yml
+++ b/.github/workflows/embed-code_md.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Embed markdown
         uses: tokusumi/markdown-embed-code@main
         with:
-          markdown: docs/stream/input.config.md
+          markdown: "README.md"
           token: ${{ secrets.GITHUB_TOKEN }}
           message: "synchronizing Readme"
           silent: true
