--- a/.github/workflows/embed-code.yml
+++ b/.github/workflows/embed-code.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-          ref: testing_markdown
+          ref: refs/heads/${{ github.head_ref }}
 
       - name: Set up Python
         uses: actions/setup-python@v2
