--- a/.github/workflows/embed-code.yml
+++ b/.github/workflows/embed-code.yml
@@ -14,12 +14,7 @@ jobs:
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
           fetch-depth: 0 # otherwise, you will failed to push refs to dest repo
-          ref: refs/heads/${{ github.head_ref }}
-
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
+          ref: testing_markdown
 
       - name: Embed markdown
         uses: tokusumi/markdown-embed-code@main
@@ -27,4 +22,5 @@ jobs:
           markdown: README.md
           token: ${{ secrets.GITHUB_TOKEN }}
           message: "synchronizing aaa Readme"
+          no_change: "No change on Readme."
           silent: false
