--- a/.github/workflows/embed-code.yml
+++ b/.github/workflows/embed-code.yml
@@ -9,7 +9,7 @@ jobs:
   embed-code:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
+      - name: Checkout the repository
         uses: actions/checkout@v2
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
