--- a/.github/workflows/embedmd.yml
+++ b/.github/workflows/embedmd.yml
@@ -15,5 +15,5 @@ jobs:
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
-          ls ${{ github.workspace }}
+          ls -lR ${{ github.workspace }} | grep *.md
       - run: echo "🍏 This job's status is ${{ job.status }}."
