--- a/.github/workflows/embedmd.yml
+++ b/.github/workflows/embedmd.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: List all .md files in the repository
         run: |
-          ls -lR ${{ github.workspace }} | grep *.md
+          find ${{ github.workspace }} -type f | grep *.md | cut -c 2-
       - run: echo "🍏 This job's status is ${{ job.status }}."
