--- a/.github/workflows/embedmd.yml
+++ b/.github/workflows/embedmd.yml
@@ -6,14 +6,9 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: install embedmd
+        run: go get github.com/campoy/embedmd
+
       - name: List all .md files in the repository
-        run: |
-          find ${{ github.workspace }} -type f | grep *.md | cut -c 2-
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+        run: find ${{ github.workspace }} -type f | grep *.md | cut -c 2-
+
