--- a/.github/workflows/embedmd.yml
+++ b/.github/workflows/embedmd.yml
@@ -6,6 +6,16 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
+      - name: setup golang
+        uses: actions/setup-go@v2
+        with:
+          stable: 'false'
+          go-version: '1.14.0'
+
+      - name: go version
+        run: |
+          go version
+
       - name: install embedmd
         run: |
           go get github.com/campoy/embedmd
