--- a/.github/workflows/embedmd.yml
+++ b/.github/workflows/embedmd.yml
@@ -6,25 +6,37 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
+      - name: last commit id
+      - uses: octokit/request-action@v2.x
+        id: get_PR_commits
+        with:
+          route: GET /repos/:repo/pulls/:pull_number/commits
+          repo: ${{ github.repository }}
+          pull_number: ${{ github.event.issue.number }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: set commit to output
+        id: getcommit
+        run: |
+          prsha=$(echo $response | jq '.[-1].sha'  | tr -d '"')
+          echo "::set-output name=sha::$prsha"
+        env:
+          response:  ${{ steps.get_PR_commits.outputs.data }}
+
+      - name: checkout on the lastest commit
+      - uses: actions/checkout@v2
+        with:
+          ref: ${{steps.getcommit.outputs.sha}}
+
       - name: setup golang
-        uses: actions/setup-go@v2
+      - uses: actions/setup-go@v2
         with:
           stable: 'false'
-          go-version: '1.17.0'
+          go-version: '1.14.0'
 
-      - name: go version
-        run: |
-          go version
-
-      - name: install embedmd
+      - name: running embedmed
         run: |
           go get github.com/campoy/embedmd
-
-      - name: list all .md files in the repository
-        run: |
-          cd ${{ github.workspace }}
-          find  -type f | grep *.md | cut -c 2-
-
-      - name: run embedmd
-        run: |
-          embedmd -d ${{ github.workspace }}/README.md
+          cd docs
+          embedmd -w $(find *.md)
