--- a/.github/workflows/embedmd.yml
+++ b/.github/workflows/embedmd.yml
@@ -18,17 +18,13 @@ jobs:
           stable: 'false'
           go-version: '1.17.0'
 
-      - name: running embedmed
+      - name: "running embedded"
         run: |
           go get github.com/campoy/embedmd
           embedmd -w README.md
 
-      - name: Commit files
-        run: |
-          git config --local user.email "githubactions@github.com"
-          git config --local user.name "embedmd step"
-          git commit -s -m "Run embedmed" -a
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+      - name: Auto-commit
+        uses: docker://cdssnc/auto-commit-github-action
+        needs: [ "running embedded" ]
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
