--- a/.github/workflows/embedmd.yml
+++ b/.github/workflows/embedmd.yml
@@ -23,15 +23,9 @@ jobs:
           go get github.com/campoy/embedmd
           embedmd -w README.md
 
-      - name: auto-commit action
-        uses: docker://cdssnc/touched-github-action:latest
-        with:
-          args: auto-commit/**
-      - name: build auto-commit
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        with:
-          args: build -t cdssnc/auto-commit-github-action ./auto-commit
-      - name: push auto-commit
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        with:
-          args: push cdssnc/auto-commit-github-action
+      - name: Commit report
+        run: |
+          git config --global user.name 'Your Name'
+          git config --global user.email 'your-username@users.noreply.github.com'
+          git commit -am "Automated report"
+          git push
