--- a/.github/workflows/update_md.yml
+++ b/.github/workflows/update_md.yml
@@ -18,10 +18,15 @@ jobs:
           stable: 'false'
           go-version: '1.17.0'
 
-      - name: "running embedded"
+      - name: "running embedmd"
         run: |
           go get github.com/campoy/embedmd
           embedmd -w README.md
+
+      - name: "running structmd"
+        run: |
+          go get github.com/justtrackio/structmd
+          structmd README.md
 
       - name: Commit report
         run: |
