--- a/.github/workflows/update_md.yml
+++ b/.github/workflows/update_md.yml
@@ -26,7 +26,7 @@ jobs:
       - name: "running structmd"
         run: |
           go get github.com/justtrackio/structmd/cmd/replace_markdown
-          structmd README.md
+          replace_markdown README.md
 
       - name: Commit report
         run: |
