--- a/.github/workflows/update_md.yml
+++ b/.github/workflows/update_md.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: "running structmd"
         run: |
+          go get github.com/justtrackio/structmd
           go install github.com/justtrackio/structmd
           structmd README.md
 
