--- a/.github/workflows/update_md.yml
+++ b/.github/workflows/update_md.yml
@@ -18,15 +18,19 @@ jobs:
           stable: 'false'
           go-version: '1.17.0'
 
+      - name: print .md files
+        run: |
+          echo $(find *.md)
+
       - name: "running embedmd"
         run: |
           go install github.com/campoy/embedmd@latest
-          embedmd -w README.md
+          embedmd -w $(find *.md)
 
       - name: "running structmd"
         run: |
           go install github.com/justtrackio/structmd@latest
-          structmd README.md
+          structmd $(find *.md)
 
       - name: Commit report
         continue-on-error: true
