--- a/.github/workflows/update_md.yml
+++ b/.github/workflows/update_md.yml
@@ -30,4 +30,5 @@ jobs:
 
       - name: "Ensure embedmd & structmd found no changes"
         run: |
+          echo $(git diff)
           git diff --quiet
