test/fixtures: refactored fixtures_configurable_kvstore_test;

--- a/test/fixtures/kvstore/config.test.yml
+++ b/test/fixtures/kvstore/config.test.yml
@@ -8,3 +8,9 @@ kvstore:
   test_store:
     type: chain
     elements: [inMemory]
+  another_test_store:
+    type: chain
+    elements: [inMemory]
+
+fixtures:
+  enabled: true
