--- a/test/db-repo/change_history/config.test.yml
+++ b/test/db-repo/change_history/config.test.yml
@@ -1,7 +1,7 @@
 env: test
 app_project: gosoline
 app_family: integration-test
-app_name: db-query-test
+app_name: db-repo-change-history-test
 
 db:
   default:
@@ -11,13 +11,13 @@ db:
     uri:
       host: 127.0.0.1
       port: 3306
-      user: root
+      user: gosoline
       password: gosoline
-      database: myDbName
+      database: gosoline
     migrations:
       enabled: true
       table_prefixed: false
-      path: file://test_fixtures/migrations_db_repo_query/
+      path: file://migrations/
 
 change_history:
   table_suffix: history_entries
