--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -104,6 +104,24 @@ jobs:
       - name: Test
         run: go test ./...
 
+  go-test-race:
+    name: go test (race)
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Set up Go 1.17
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Get dependencies
+        run: go get -v -t -d ./...
+
+      - name: Test (race)
+        run: go test -race ./...
+
   go-test-integration:
     name: go test (integration)
     runs-on: ubuntu-20.04
@@ -121,3 +139,21 @@ jobs:
 
       - name: Integration tests
         run: go test -p 2 --tags='integration,fixtures' ./test/...
+
+  go-test-integration-race:
+    name: go test (integration, race)
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Set up Go 1.17
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+
+      - name: Get dependencies
+        run: go get -v -t -d ./...
+
+      - name: Integration tests (race)
+        run: go test -p 2 -race --tags='integration,fixtures' ./test/...
